--- a/test-output/index.html
+++ b/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\Baburao\AppData\Local\Temp\testng-eclipse--1416087745\testng-customsuite.xml</span>
+                    <span>C:\Users\Baburao\AppData\Local\Temp\testng-eclipse-1176998975\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -91,7 +91,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">1 method,   1 passed</span>
+                    <span class="method-stats">2 methods,   2 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -102,7 +102,12 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.qa.tests.GetAPITest" hash-for-method="getAPITest">getAPITest</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.qa.tests.GetAPITest" hash-for-method="getAPITestwithHeader">getAPITestwithHeader</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.qa.tests.GetAPITest" hash-for-method="getAPITestwithoutHeader">getAPITestwithoutHeader</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -125,9 +130,16 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="getAPITest">
-                  </a> <!-- getAPITest -->
-                  <span class="method-name">getAPITest</span>
+                  <a name="getAPITestwithHeader">
+                  </a> <!-- getAPITestwithHeader -->
+                  <span class="method-name">getAPITestwithHeader</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="getAPITestwithoutHeader">
+                  </a> <!-- getAPITestwithoutHeader -->
+                  <span class="method-name">getAPITestwithoutHeader</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -135,7 +147,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Baburao\AppData\Local\Temp\testng-eclipse--1416087745\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\Baburao\AppData\Local\Temp\testng-eclipse-1176998975\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -184,11 +196,15 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(1);
+data.addRows(2);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'getAPITest')
+data.setCell(0, 1, 'getAPITestwithoutHeader')
 data.setCell(0, 2, 'com.qa.tests.GetAPITest')
-data.setCell(0, 3, 3702);
+data.setCell(0, 3, 2738);
+data.setCell(1, 0, 1)
+data.setCell(1, 1, 'getAPITestwithHeader')
+data.setCell(1, 2, 'com.qa.tests.GetAPITest')
+data.setCell(1, 3, 637);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
@@ -225,8 +241,16 @@ return data;
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">getAPITest</span>
-                <span class="method-start">26 ms</span>
+                <span class="method-name">getAPITestwithoutHeader</span>
+                <span class="method-start">29 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method before">
+                <span class="method-name">setup</span>
+                <span class="method-start">2827 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="test-method">
+                <span class="method-name">getAPITestwithHeader</span>
+                <span class="method-start">2829 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
