--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,12 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="7996a0">  <td>18/06/29 16:26:21</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GetAPITest.getAPITestwithHeader()[pri:2, instance:com.qa.tests.GetAPITest@39aeed2f]">getAPITestwithHeader</td> 
-  <td>main@348100441</td>   <td></td> </tr>
-<tr bgcolor="7996a0">  <td>18/06/29 16:26:18</td>   <td>-2800</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GetAPITest.getAPITestwithoutHeader()[pri:1, instance:com.qa.tests.GetAPITest@39aeed2f]">getAPITestwithoutHeader</td> 
-  <td>main@348100441</td>   <td></td> </tr>
-<tr bgcolor="7996a0">  <td>18/06/29 16:26:18</td>   <td>-2825</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;GetAPITest.setup()[pri:0, instance:com.qa.tests.GetAPITest@39aeed2f]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@348100441</td>   <td></td> </tr>
-<tr bgcolor="7996a0">  <td>18/06/29 16:26:21</td>   <td>-1</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;GetAPITest.setup()[pri:0, instance:com.qa.tests.GetAPITest@39aeed2f]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@348100441</td>   <td></td> </tr>
+<tr bgcolor="dd9bcd">  <td>18/07/02 20:17:52</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PostAPITest.postapiTest()[pri:0, instance:com.qa.tests.PostAPITest@26be92ad]">postapiTest</td> 
+  <td>main@485041780</td>   <td></td> </tr>
+<tr bgcolor="dd9bcd">  <td>18/07/02 20:17:52</td>   <td>-20</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;PostAPITest.setup()[pri:0, instance:com.qa.tests.PostAPITest@26be92ad]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@485041780</td>   <td></td> </tr>
 </table>
